feat: prepare deployment config for Railway + Vercel
- DB config reads from env vars (SPRING_DATASOURCE_*)
- CORS allowed origins reads from env var (cors.allowed-origins)
- Frontend API baseURL reads from VITE_API_BASE_URL env var

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>